modificando textos e favicon

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Article preview component</title>
+  <title>Artigo: Guia de setores F1 2023 Interlagos</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+ 
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -16,21 +16,21 @@
 </head>
 <body>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
+  Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.
+  Você não vai errar na próxima vez que comprar seu ingresso!
 
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
+  Fuja dos setores que tem menos vista pra pista, procure por setores onde há telões,
+  comida inclusa no valor do ingresso e arquibancada coberta, clique e saiba mais!
+  Há lugares mais caros pra quem pode pagar, mas você terá uma experiência inesquecível.
 
-  Michelle Appleton
-  28 Jun 2020
+  Lucas Buscarioli (Inspirado na matéria do Splash and Go no Youtube)
+  04/01/2023
 
   Share
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Lucas Buscarioli</a>.
   </div>
 </body>
 </html>
