estruturando html, linkando CSS e JS, adicionando primeiras imagens

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Artigo: Guia de setores F1 2023 Interlagos</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
- 
+  <title>Artigo: Guia de setores F1 2023 Interlagos</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -16,21 +15,39 @@
 </head>
 <body>
 
-  Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.
-  Você não vai errar na próxima vez que comprar seu ingresso!
+  <div class="principal">
 
-  Fuja dos setores que tem menos vista pra pista, procure por setores onde há telões,
-  comida inclusa no valor do ingresso e arquibancada coberta, clique e saiba mais!
-  Há lugares mais caros pra quem pode pagar, mas você terá uma experiência inesquecível.
+    <div class="imgPista">
+      <img src="images/track-picture.jpg" alt="foto de pista de corridas">
+    </div>
 
-  Lucas Buscarioli (Inspirado na matéria do Splash and Go no Youtube)
-  04/01/2023
+    <div class="titulo">
+      <p>Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.
+        Você não vai errar na próxima vez que comprar seu ingresso!<p/>
+    </div>
 
-  Share
+    <div class="textoDescricao">
+      <p>Fuja dos setores que tem menos vista pra pista, procure por setores onde há telões,
+        comida inclusa no valor do ingresso e arquibancada coberta, clique e saiba mais!
+        Há lugares mais caros pra quem pode pagar, mas você terá uma experiência inesquecível.</p> 
+    </div>
+
+    <div class="imgAvatar">
+      <img src="images/avatar-driver.jpg" alt="foto de piloto com capacete">
+    </div>
+
+    <div class="compartilhar">
+      Lucas Buscarioli (Inspirado na matéria do Splash and Go no Youtube)
+      04/01/2023
+    </div>
+
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Lucas Buscarioli</a>.
   </div>
+
+  <script src="main.js"></script>
 </body>
 </html>
