--- a/index.html
+++ b/index.html
@@ -5,44 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
 
   <title>Artigo: Guia de setores F1 2023 Interlagos</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div class="principal">
+    <img src="images/track-picture.jpg" id="imgPrincipal" alt="foto de pista de corridas" width="300px">
 
-    <div class="imgPista">
-      <img src="images/track-picture.jpg" alt="foto de pista de corridas">
+    <div class="txt">
+      <div class="titulo">
+        <p>Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.
+          Você não vai errar na próxima vez que comprar seu ingresso!<p/>
+      </div>
+  
+      <div class="descricao">
+        <p>Fuja dos setores que tem menos vista pra pista, procure por setores onde há telões,
+          comida inclusa no valor do ingresso e arquibancada coberta, clique e saiba mais!
+          Há lugares mais caros pra quem pode pagar, mas você terá uma experiência inesquecível.</p> 
+      </div>
     </div>
 
-    <div class="titulo">
-      <p>Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.
-        Você não vai errar na próxima vez que comprar seu ingresso!<p/>
-    </div>
+    <div class="autor">
 
-    <div class="textoDescricao">
-      <p>Fuja dos setores que tem menos vista pra pista, procure por setores onde há telões,
-        comida inclusa no valor do ingresso e arquibancada coberta, clique e saiba mais!
-        Há lugares mais caros pra quem pode pagar, mas você terá uma experiência inesquecível.</p> 
-    </div>
+      <div class="pessoa">
+        <img src="images/avatar-driver.jpg" alt="foto de piloto com capacete">
+        <div class="nome">
+          <p>Lucas Buscarioli</p>
+          <p>04 Jan 2023</p>
+        </div>
+      </div>
 
-    <div class="imgAvatar">
-      <img src="images/avatar-driver.jpg" alt="foto de piloto com capacete">
-    </div>
+      <button id="button">
+        <img src="/images/icon-share.svg" alt="">
+      </button>
+      <button id="buttonClose">
+        <img src="/images/icon-share.svg" alt="">
+      </button>
 
-    <div class="compartilhar">
-      Lucas Buscarioli (Inspirado na matéria do Splash and Go no Youtube)
-      04/01/2023
+      <div class="share">
+        SHARE
+        <div class="shareIcons">
+          <img src="images/icon-facebook.svg" alt="logo facebook">
+          <img src="images/icon-twitter.svg" alt="logo twitter">
+          <img src="images/icon-pinterest.svg" alt="logo pinterest">
+        </div>
+        <div class="triangle"></div>
+      </div>
     </div>
-
   </div>
   
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Lucas Buscarioli</a>.
