--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
 
   <title>Artigo: Guia de setores F1 2023 Interlagos</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -61,10 +57,10 @@
   </div>
   
 
-  <div class="attribution">
+<!--  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Lucas Buscarioli</a>.
-  </div>
+  </div> -->
 
   <script src="main.js"></script>
 </body>
