--- a/index.html
+++ b/index.html
@@ -6,43 +6,41 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
 
-  <title>Artigo: Guia de setores F1 2023 Interlagos</title>
+  <title>Artigo: Guia de setores de Interlagos</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div class="principal">
+
     <img src="images/track-picture.jpg" id="imgPrincipal" alt="foto de pista de corridas" width="300px">
 
     <div class="txt">
       <div class="titulo">
-        <p>Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.
-          Você não vai errar na próxima vez que comprar seu ingresso!<p/>
+        <p>Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.<p/>
       </div>
   
       <div class="descricao">
         <p>Fuja dos setores que tem menos vista pra pista, procure por setores onde há telões,
-          comida inclusa no valor do ingresso e arquibancada coberta, clique e saiba mais!
-          Há lugares mais caros pra quem pode pagar, mas você terá uma experiência inesquecível.</p> 
+          comida inclusa no valor do ingresso e arquibancada coberta, clique e saiba mais!</p> 
       </div>
-    </div>
-
-    <div class="autor">
 
       <div class="pessoa">
-        <img src="images/avatar-driver.jpg" alt="foto de piloto com capacete">
-        <div class="nome">
-          <p>Lucas Buscarioli</p>
-          <p>04 Jan 2023</p>
+        <div class="imgAvatar">
+          <img src="images/avatar-driver.jpg" alt="foto de piloto com capacete" width="45px">
+          <div class="nome">
+            <p>Lucas Buscarioli</p>
+            <p>04 Jan 2023</p>
+          </div>
         </div>
+  
+        <button id="button">
+          <img src="/images/icon-share.svg" alt="">
+        </button>
+        <button id="buttonClose">
+          <img src="/images/icon-share.svg" alt="">
+        </button>
       </div>
-
-      <button id="button">
-        <img src="/images/icon-share.svg" alt="">
-      </button>
-      <button id="buttonClose">
-        <img src="/images/icon-share.svg" alt="">
-      </button>
 
       <div class="share">
         SHARE
@@ -54,6 +52,7 @@
         <div class="triangle"></div>
       </div>
     </div>
+
   </div>
   
 
