consertando bug svg com tag object no HTML

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
   
         <button id="button">
-          <img src="/images/icon-share.svg" alt="">
+          <object data="images/icon-share.svg" type="image/svg+xml"></object>
         </button>
         <button id="buttonClose">
-          <img src="/images/icon-share.svg" alt="">
+          <object data="images/icon-share.svg" type="image/svg+xml"></object>
         </button>
       </div>
 
