--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
   
         <button id="button">
-          <object data="images/icon-share.svg" type="image/svg+xml"></object>
+          <object data="images/icon-share.svg" type="image/svg+xml"></object> <!--IMG .SVG DEVEM SER USADOS COM A TAG OBJECT, SE NÃO O navegador NÃO RENDERIZA.-->
         </button>
         <button id="buttonClose">
           <object data="images/icon-share.svg" type="image/svg+xml"></object>
@@ -43,12 +43,15 @@
       </div>
 
       <div class="share">
-        SHARE
+        <p>S H A R E</p>
         <div class="shareIcons">
           <img src="images/icon-facebook.svg" alt="logo facebook">
           <img src="images/icon-twitter.svg" alt="logo twitter">
           <img src="images/icon-pinterest.svg" alt="logo pinterest">
         </div>
+        <button id="buttonCloseOne">
+          <object data="images/icon-share.svg" type="image/svg+xml"></object>
+        </button>
         <div class="triangle"></div>
       </div>
     </div>
