--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
   
         <button id="button">
-          <object data="images/icon-share.svg" type="image/svg+xml"></object> <!--IMG .SVG DEVEM SER USADOS COM A TAG OBJECT, SE NÃO O navegador NÃO RENDERIZA.-->
+          <img src="images/icon-share.svg" alt="seta">
         </button>
         <button id="buttonClose">
           <object data="images/icon-share.svg" type="image/svg+xml"></object>
