--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <img src="images/icon-share.svg" alt="seta">
         </button>
         <button id="buttonClose">
-          <object data="images/icon-share.svg" type="image/svg+xml"></object>
+          <img src="images/icon-share.svg" alt="seta">
         </button>
       </div>
 
@@ -50,7 +50,7 @@
           <img src="images/icon-pinterest.svg" alt="logo pinterest">
         </div>
         <button id="buttonCloseOne">
-          <object data="images/icon-share.svg" type="image/svg+xml"></object>
+          <img src="images/icon-share.svg" alt="seta">
         </button>
         <div class="triangle"></div>
       </div>
