adicionando função 'hide' no botão share

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="imgAvatar">
           <img src="images/avatar-driver.jpg" alt="foto de piloto com capacete" width="45px">
           <div class="nome">
-            <p>Lucas Buscarioli</p>
+            <p><strong>Lucas Buscarioli</strong></p>
             <p>04 Jan 2023</p>
           </div>
         </div>
