adicionando hover no título e botão share

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 
     <div class="txt">
       <div class="titulo">
-        <p>Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.<p/>
+        <a href="https://www.instagram.com/p/Ck-_NK6uKfl/">Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.</a>
       </div>
   
       <div class="descricao">
-        <p>Fuja dos setores que tem menos vista pra pista, procure por setores onde há telões,
-          comida inclusa no valor do ingresso e arquibancada coberta, clique e saiba mais!</p> 
+        <p>Fuja dos setores que tem menos vista pra pista, procure lugares onde há telões,
+          comida inclusa no valor do ingresso e arquibancada coberta. Clique no título e saiba mais!</p> 
       </div>
 
       <div class="pessoa">
         <div class="imgAvatar">
           <img src="images/avatar-driver.jpg" alt="foto de piloto com capacete" width="45px">
           <div class="nome">
-            <p><strong>Lucas Buscarioli</strong></p>
+            <p><strong>Splash and Go</strong></p>
             <p>04 Jan 2023</p>
           </div>
         </div>
