organizando HTML de melhor forma

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 
-  <div class="principal">
+  <article class="principal">
 
     <img src="images/track-picture.jpg" id="imgPrincipal" alt="foto de pista de corridas" width="300px">
 
-    <div class="txt">
+    <main class="content">
       <div class="titulo">
         <a href="https://www.instagram.com/p/Ck-_NK6uKfl/">Exploramos todos os prós e contras de cada setor do autódromo de Interlagos.</a>
       </div>
@@ -54,9 +54,9 @@
         </button>
         <div class="triangle"></div>
       </div>
-    </div>
+    </main>
 
-  </div>
+  </article>
   
 
 <!--  <div class="attribution">
