melhorias na resposividade em todas as resoluções, melhorias no JS

--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
           <img src="images/icon-twitter.svg" alt="logo twitter">
           <img src="images/icon-pinterest.svg" alt="logo pinterest">
         </div>
-        <button id="buttonCloseOne">
+        <button id="buttonCloseTwo">
           <img src="images/icon-share.svg" alt="seta">
         </button>
         <div class="triangle"></div>
       </div>
+      
     </main>
 
   </article>
