origanizando pastas de melhor forma

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
 
   <title>Artigo: Guia de setores de Interlagos</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
 
   <article class="principal">
 
-    <img src="images/track-picture.jpg" id="imgPrincipal" alt="foto de pista de corridas" width="300px">
+    <img src="assets/images/track-picture.jpg" id="imgPrincipal" alt="foto de pista de corridas" width="300px">
 
     <main class="content">
       <div class="titulo">
@@ -27,7 +27,7 @@
 
       <div class="pessoa">
         <div class="imgAvatar">
-          <img src="images/avatar-driver.jpg" alt="foto de piloto com capacete" width="45px">
+          <img src="assets/images/avatar-driver.jpg" alt="foto de piloto com capacete" width="45px">
           <div class="nome">
             <p><strong>Splash and Go</strong></p>
             <p>04 Jan 2023</p>
@@ -35,22 +35,22 @@
         </div>
   
         <button id="button">
-          <img src="images/icon-share.svg" alt="seta">
+          <img src="assets/images/icon-share.svg" alt="seta">
         </button>
         <button id="buttonClose">
-          <img src="images/icon-share.svg" alt="seta">
+          <img src="assets/images/icon-share.svg" alt="seta">
         </button>
       </div>
 
       <div class="share">
         <p>S H A R E</p>
         <div class="shareIcons">
-          <img src="images/icon-facebook.svg" alt="logo facebook">
-          <img src="images/icon-twitter.svg" alt="logo twitter">
-          <img src="images/icon-pinterest.svg" alt="logo pinterest">
+          <img src="assets/images/icon-facebook.svg" alt="logo facebook">
+          <img src="assets/images/icon-twitter.svg" alt="logo twitter">
+          <img src="assets/images/icon-pinterest.svg" alt="logo pinterest">
         </div>
         <button id="buttonCloseTwo">
-          <img src="images/icon-share.svg" alt="seta">
+          <img src="assets/images/icon-share.svg" alt="seta">
         </button>
         <div class="triangle"></div>
       </div>
@@ -65,6 +65,6 @@
     Coded by <a href="#">Lucas Buscarioli</a>.
   </div> -->
 
-  <script src="main.js"></script>
+  <script src="assets/main.js"></script>
 </body>
 </html>
